draft for env. trying to get jupyter to work.ur gay

--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -1,4 +1,16 @@
 env:
   window_size: 10
   initial_cash: 10000
-  max_steps: null   # optional — can leave as null
+  max_steps: 1000        # or null
+  trade_size: 1
+  allow_short: true
+  max_position: 10       # cap absolute units (null for uncapped)
+  commission_pct: 0.0005 # 5 bps per side
+  slippage_pct: 0.0005   # 5 bps slippage
+
+reward:
+  sharpe_alpha: 0.0        # try 0.1 to start
+  sharpe_lookback: 20
+  sharpe_annualizer: 1.0    # set to sqrt(252*k) if you know bars/day
+  dd_beta: 0.0              # try 0.1 to start
+
