--- a/configs/data.yaml
+++ b/configs/data.yaml
@@ -5,8 +5,8 @@ data:
   limit: 1000
   retries: 3
   retry_backoff: 5
-  start_date: "2025-01-01"
-  end_date: "2025-09-01"
+  start_date: "2024-01-01"
+  end_date: null   # optional
   paths:
     raw: data/raw
     interim: data/interim
