--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "matplotlib",
     "pyarrow",
     "numpy",
-    "gymnasium"
+    "gymnasium",
+    "pytest"
 ]
 
 [tool.setuptools]
