sorry i broke your dqn the features arent being fed in correctly. tried to add wasseyboy feature

--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -7,6 +7,7 @@ env:
   max_position: 10       # cap absolute units (null for uncapped)
   commission_pct: 0.00025 # 5 bps per side
   slippage_pct: 0.00025   # 5 bps slippage
+  include_wasserstein: true
 
 reward:
   sharpe_alpha: 0.1       # try 0.1 to start
